<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".stepper.StepperFragment3">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:scrollbars="vertical"
        android:fadeScrollbars="true"
        android:fadingEdge="vertical"
        android:requiresFadingEdge="vertical"
        android:fadingEdgeLength="30dp"
        android:layout_height="match_parent">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="15dp">

            <TextView
                android:id="@+id/textview1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="Nutrition"
                android:textColor="@android:color/holo_blue_light"
                android:textSize="20sp"
                android:textStyle="bold"></TextView>

            <ImageView
                android:id="@+id/imgview1"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_below="@id/textview1"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:src="@drawable/stepper_nutrition">

            </ImageView>


            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/imgview1"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                app:cardCornerRadius="4dp"
                app:cardElevation="4dp"
                app:cardUseCompatPadding="true">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="20dp">

                    <TextView
                        android:id="@+id/textview123"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/score1"></TextView>


                    <androidx.appcompat.widget.AppCompatCheckBox
                        android:id="@+id/radio1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/textview123"
                        android:layout_marginTop="8dp"
                        android:text="0" />

                    <androidx.appcompat.widget.AppCompatCheckBox
                        android:id="@+id/radio2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/radio1"
                        android:layout_marginTop="8dp"
                        android:text="1-2" />

                    <androidx.appcompat.widget.AppCompatCheckBox
                        android:id="@+id/radio3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/radio2"
                        android:layout_marginTop="8dp"
                        android:text="3-4" />


                    <androidx.appcompat.widget.AppCompatCheckBox
                        android:id="@+id/radio4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/radio3"
                        android:layout_marginTop="8dp"
                        android:text="5+" />


                </RelativeLayout>


            </com.google.android.material.card.MaterialCardView>


            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/card1"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                app:cardCornerRadius="4dp"
                app:cardElevation="4dp"
                app:cardUseCompatPadding="true">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="20dp">

                    <TextView
                        android:id="@+id/textview1235"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/reerrwegsf"></TextView>


                    <androidx.appcompat.widget.AppCompatCheckBox
                        android:id="@+id/radio5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/textview1235"
                        android:layout_marginTop="8dp"
                        android:text="Very often" />

                    <androidx.appcompat.widget.AppCompatCheckBox
                        android:id="@+id/radio6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/radio5"
                        android:layout_marginTop="8dp"
                        android:text="Sometimes " />


                    <androidx.appcompat.widget.AppCompatCheckBox
                        android:id="@+id/radio16"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/radio6"
                        android:layout_marginTop="8dp"
                        android:text="Never" />


                    <TextView
                        android:id="@+id/textviree3r32"
                        android:layout_width="match_parent"
                        android:layout_below="@+id/radio16"
                        android:layout_marginTop="20dp"
                        android:layout_height="wrap_content"
                        android:text="@string/redmeat"></TextView>

                    <androidx.appcompat.widget.AppCompatCheckBox
                        android:id="@+id/radio7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/textviree3r32"
                        android:layout_marginTop="8dp"
                        android:text="4 or more" />


                    <androidx.appcompat.widget.AppCompatCheckBox
                        android:id="@+id/radio8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/radio7"
                        android:layout_marginTop="8dp"
                        android:text="2-4 " />


                    <androidx.appcompat.widget.AppCompatCheckBox
                        android:id="@+id/radio9"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/radio8"
                        android:layout_marginTop="8dp"
                        android:text="Less than 2" />


                </RelativeLayout>


            </com.google.android.material.card.MaterialCardView>




            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/card2"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                app:cardCornerRadius="4dp"
                app:cardElevation="4dp"
                app:cardUseCompatPadding="true">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="20dp">

                    <TextView
                        android:id="@+id/textview12356"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/protein"></TextView>


                    <androidx.appcompat.widget.AppCompatCheckBox
                        android:id="@+id/radi5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/textview12356"
                        android:layout_marginTop="8dp"
                        android:text="7" />

                    <androidx.appcompat.widget.AppCompatCheckBox
                        android:id="@+id/radi6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/radi5"
                        android:layout_marginTop="8dp"
                        android:text="2-4" />


                    <androidx.appcompat.widget.AppCompatCheckBox
                        android:id="@+id/radi16"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/radi6"
                        android:layout_marginTop="8dp"
                        android:text="Less than 2" />


                    <TextView
                        android:id="@+id/textvire32"
                        android:layout_width="match_parent"
                        android:layout_below="@+id/radi16"
                        android:layout_marginTop="20dp"
                        android:layout_height="wrap_content"
                        android:text="@string/saltinfood"></TextView>

                    <androidx.appcompat.widget.AppCompatCheckBox
                        android:id="@+id/radi7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/textvire32"
                        android:layout_marginTop="8dp"
                        android:text="Yes" />


                    <androidx.appcompat.widget.AppCompatCheckBox
                        android:id="@+id/radi8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/radi7"
                        android:layout_marginTop="8dp"
                        android:text="No" />

                </RelativeLayout>


            </com.google.android.material.card.MaterialCardView>


        </RelativeLayout>




    </androidx.core.widget.NestedScrollView>



</LinearLayout>