<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".stepper.StepperFragment3">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fadeScrollbars="true"
        android:fadingEdge="vertical"
        android:fadingEdgeLength="30dp"
        android:requiresFadingEdge="vertical"
        android:scrollbars="vertical">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="15dp">

            <TextView
                android:id="@+id/textview1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="Smoking"
                android:textColor="@android:color/holo_blue_light"
                android:textSize="20sp"
                android:textStyle="bold"></TextView>

            <ImageView
                android:id="@+id/imgview1"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_below="@id/textview1"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:src="@drawable/cigarette">

            </ImageView>


            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/imgview1"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                app:cardCornerRadius="4dp"
                app:cardElevation="4dp"
                app:cardUseCompatPadding="true">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="20dp">

                    <TextView
                        android:id="@+id/textview123"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Are you a smoker?"></TextView>


                    <androidx.appcompat.widget.AppCompatCheckBox
                        android:id="@+id/radio1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/textview123"
                        android:layout_marginTop="8dp"
                        android:text="Yes" />

                    <androidx.appcompat.widget.AppCompatCheckBox
                        android:id="@+id/radio2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/radio1"
                        android:layout_marginTop="8dp"
                        android:text="No" />

                </RelativeLayout>


            </com.google.android.material.card.MaterialCardView>


            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/card1"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                app:cardCornerRadius="4dp"
                app:cardElevation="4dp"
                app:cardUseCompatPadding="true">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="20dp">

                    <TextView
                        android:id="@+id/textview1235"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cigsperday"></TextView>


                    <androidx.appcompat.widget.AppCompatCheckBox
                        android:id="@+id/radio5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/textview1235"
                        android:layout_marginTop="8dp"
                        android:text="1-3" />

                    <androidx.appcompat.widget.AppCompatCheckBox
                        android:id="@+id/radio6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/radio5"
                        android:layout_marginTop="8dp"
                        android:text="3-7" />


                    <androidx.appcompat.widget.AppCompatCheckBox
                        android:id="@+id/radio16"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/radio6"
                        android:layout_marginTop="8dp"
                        android:text=">10" />

                </RelativeLayout>


            </com.google.android.material.card.MaterialCardView>


            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/card2"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                app:cardCornerRadius="4dp"
                app:cardElevation="4dp"
                app:cardUseCompatPadding="true">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="20dp">

                    <TextView
                        android:id="@+id/textview12356"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tried_to_quit"></TextView>


                    <androidx.appcompat.widget.AppCompatCheckBox
                        android:id="@+id/radi5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/textview12356"
                        android:layout_marginTop="8dp"
                        android:text="Yes" />

                    <androidx.appcompat.widget.AppCompatCheckBox
                        android:id="@+id/radi6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/radi5"
                        android:layout_marginTop="8dp"
                        android:text="No" />


                    <TextView
                        android:id="@+id/textview1235643"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/radi6"
                        android:layout_marginTop="20dp"
                        android:text="@string/wouldyouquit"></TextView>


                    <androidx.appcompat.widget.AppCompatCheckBox
                        android:id="@+id/radi54323"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/textview1235643"
                        android:layout_marginTop="8dp"
                        android:text="Yes" />

                    <androidx.appcompat.widget.AppCompatCheckBox
                        android:id="@+id/radi654345"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/radi54323"
                        android:layout_marginTop="8dp"
                        android:text="No" />


                </RelativeLayout>


            </com.google.android.material.card.MaterialCardView>


        </RelativeLayout>


    </androidx.core.widget.NestedScrollView>

</LinearLayout>